import "goby/protobuf/dccl_option_extensions.proto";
import "goby/protobuf/queue_option_extensions.proto";
import "goby/protobuf/header.proto";

message GobyMessage
{
  option (dccl_msg).id = 4;
  option (dccl_msg).max_bytes = 32;

  required string telegram = 1 [(dccl_field).max_length=10]; 
  required Header header = 2;
}

